--- a/src/components/SelectedForUComponent/selectedForU.style.css
+++ b/src/components/SelectedForUComponent/selectedForU.style.css
@@ -22,11 +22,13 @@
   font-size: 1.5em;
   font-weight: 400;
   text-transform: capitalize;
+  color: var(--main-text-color);
 }
 
 .featuren_products_container .fetature button {
   border-color: transparent;
-  background-color: white;
+  background-color: var(--second-item-bag);
+  color: var(--main-text-color);
   border: 1px solid gray;
   border-radius: 30px;
   font-size: 1.2em;
