--- a/src/components/WhyChoosUsComponent/whyChooseUs.style.css
+++ b/src/components/WhyChoosUsComponent/whyChooseUs.style.css
@@ -7,6 +7,7 @@
   width: 100%;
   font-size: 1.75em;
   font-weight: 300;
+  color: var(--main-text-color);
   text-align: center;
   margin: 50px 0;
 }
@@ -16,9 +17,9 @@
   display: grid;
   -ms-grid-columns: (minmax(230px, 1fr))[auto-fill];
       grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -27,18 +28,21 @@
 
 .why_us .advantages .advantage {
   line-height: 30px;
+  -webkit-box-shadow: 1px 1px 3px gray;
+          box-shadow: 1px 1px 3px gray;
+  -webkit-transition: all linear 0.3s;
+  transition: all linear 0.3s;
   padding: 10px;
+  background-color: var(--second-item-bag);
 }
 
 .why_us .advantages .advantage:hover .advantage_icon {
   color: #1a6eff;
   background-color: #e1ecff;
-  -webkit-transition: all linear 0.3s;
-  transition: all linear 0.3s;
 }
 
 .why_us .advantages .advantage:hover {
-  background-color: #f6f6f6;
+  background-color: var(--item-hover-color);
   cursor: pointer;
   -webkit-transition: all linear 0.3s;
   transition: all linear 0.3s;
@@ -64,6 +68,7 @@
 }
 
 .why_us .advantages .advantage .advantage_details h4 {
+  color: var(--main-text-color);
   margin: 20px 0;
   font-size: 1.4em;
   font-weight: 300;
@@ -72,7 +77,7 @@
 .why_us .advantages .advantage .advantage_details p {
   font-size: 0.9em;
   font-weight: 400;
-  color: gray;
+  color: var(--second-font-color);
   line-height: 30px;
 }
 /*# sourceMappingURL=whyChooseUs.style.css.map */
