--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -1,2 +1,34 @@
 $mainWhite: #fff;
 $mainHoverColor: #1a6eff;
+$Main_Font_color:white;
+//////////////////////////
+$backGroundColor : white;
+$itemBackground:rgb(204, 203, 203);
+$secondItemBag : white;
+$fontColor:#191A19;
+$grayFontColor:gray;
+$hoverColor:#1a6eff;
+$secondHoverColor:#fbb03b;
+$itemHoverColor:#f6f6f6;
+$scrollItemBckground:#a0a0a08c;
+$scrollThumb:#1F1D36;
+
+
+
+// dark mode colors
+$mainBackgroundDark: #1F1D36;
+$itemBackgroundDark:#3F3351;
+$secondItemBagDark:#3F3351;
+$hoverColorDark:#3D2C8D;
+$grayFontColorDark:rgb(212, 212, 212);
+$secondHoverColorDark:#f59c0c;
+$fontColorDark:white;
+$scrollItemBckgroundDark:#e7e7e7;
+$scrollThumbDark:#3F3351;
+
+
+
+
+
+
+
