--- a/src/components/BannersComponent/banners.style.css
+++ b/src/components/BannersComponent/banners.style.css
@@ -42,8 +42,8 @@
 
 .banners .banners_container .banner .banner_info button {
   border-color: transparent;
-  color: black;
-  background-color: white;
+  color: var(--main-text-color);
+  background-color: var(--second-item-bag);
   border-radius: 30px;
   padding: 10px 20px;
   font-weight: 400;
@@ -86,7 +86,7 @@
 @media only screen and (max-width: 700px) {
   .banners .banners_container {
     width: 100%;
-    padding: 10px;
+    padding: 0;
   }
   .banners .banners_container .banner {
     width: 100%;
