--- a/src/components/BreadcrumbComponent/Breadcrumb.style.scss
+++ b/src/components/BreadcrumbComponent/Breadcrumb.style.scss
@@ -1,6 +1,9 @@
 .breadCrumb_container {
   width: 100%;
   margin-top: 70px;
-  background-color: rgb(247, 220, 181);
-  padding: 20px 10px;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  font-size: .9em;
+  color: var(--main-text-color);
 }
