--- a/src/components/FiltersComponent/Filters.style.css
+++ b/src/components/FiltersComponent/Filters.style.css
@@ -7,7 +7,7 @@
   -ms-grid-columns: 300px 1fr;
       grid-template-columns: 300px 1fr;
   gap: 20px;
-  margin: 10px 0;
+  margin: 0;
   position: relative;
 }
 
@@ -20,15 +20,19 @@
   height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
+  -webkit-transition: all linear .3s;
+  transition: all linear .3s;
   z-index: 11;
+  background-color: var(--main-background-color);
 }
 
 main .second_filters_icon {
   width: 40px;
   height: 40px;
-  background-color: white;
+  border: 1px solid var(--main-text-color);
+  background-color: var(--item-background);
   font-size: 1.1em;
-  color: black;
+  color: var(--main-text-color);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,15 +56,17 @@ main .second_filters_icon {
 .filters_component {
   width: 100%;
   min-height: 100vh;
-  background-color: white;
+  background-color: var(--main-background-color);
+  -webkit-transition: all linear .3s;
+  transition: all linear .3s;
 }
 
 .filters_component .filters_icon {
   width: 40px;
   height: 40px;
-  background-color: white;
+  background-color: var(--item-background);
   font-size: 1.1em;
-  color: black;
+  color: var(--main-text-color);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -78,6 +84,7 @@ main .second_filters_icon {
   -webkit-animation: rotate 10s infinite;
           animation: rotate 10s infinite;
   cursor: pointer;
+  border: 1px solid var(--main-text-color);
 }
 
 .filters_component .active_filter_icon {
@@ -106,14 +113,15 @@ main .second_filters_icon {
   border: 1px solid gray;
   font-size: 1.2em;
   border-color: transparent;
-  background-color: #f1f5f8;
+  background-color: #cccdcf;
+  color: var(--main-text-color);
 }
 
 .filters_component .catagories {
-  border: 1px solid #e6e6e6;
+  border: 1px solid var(--second-font-color);
   margin: 20px 0;
   padding: 10px;
-  border-radius: 2px;
+  border-radius: 5px;
 }
 
 .filters_component .catagories .title {
@@ -134,11 +142,11 @@ main .second_filters_icon {
   font-size: 1.2em;
   font-weight: 500;
   cursor: pointer;
-  color: #102a42;
+  color: var(--main-text-color);
 }
 
 .filters_component .catagories .title:hover {
-  background-color: #f1f5f8;
+  color: var(--hover-color);
 }
 
 .filters_component .catagories .catagories_content {
@@ -154,7 +162,7 @@ main .second_filters_icon {
 .filters_component .catagories .catagories_content ul li {
   padding: 10xp 20px;
   font-size: 1em;
-  color: #2c2c2c;
+  color: var(--main-text-color);
   font-weight: 400;
   cursor: pointer;
   margin: 10px 0;
@@ -223,6 +231,7 @@ main .second_filters_icon {
 .filters_component .catagories .catagories_content .Price_range {
   margin: 0 10px;
   line-height: 2;
+  color: var(--main-text-color);
 }
 
 .filters_component .catagories .catagories_content_Active {
@@ -240,6 +249,7 @@ main .second_filters_icon {
   gap: 10px;
   text-transform: capitalize;
   letter-spacing: 2px;
+  color: var(--main-text-color);
 }
 
 .filters_component .free_shipping_filter label {
@@ -298,16 +308,17 @@ main .second_filters_icon {
     visibility: visible;
   }
   .filters_component {
-    margin-top: 60px;
+    margin-top: 70px;
   }
   .filters_component .filters_icon {
     visibility: visible;
+    top: 60px;
   }
   .products_page_container {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     gap: 20px;
-    margin: 50px 0;
+    margin: 0;
   }
   .products_page_container .filters_container {
     position: fixed;
@@ -316,15 +327,19 @@ main .second_filters_icon {
     padding: 10px;
     height: 100%;
     width: 100vw;
-    background-color: white;
+    background-color: var(--main-background-color);
     -webkit-transform: translate(-100%);
             transform: translate(-100%);
+    visibility: hidden;
+    opacity: 0;
     -webkit-transition: all linear 0.3s;
     transition: all linear 0.3s;
   }
   .products_page_container .active_filter_container {
     -webkit-transform: translate(0);
             transform: translate(0);
+    visibility: visible;
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=Filters.style.css.map */
