--- a/src/components/FiltersComponent/Filters.style.scss
+++ b/src/components/FiltersComponent/Filters.style.scss
@@ -5,7 +5,7 @@
   padding: 10px;
   grid-template-columns: 300px 1fr;
   gap: 20px;
-  margin: 10px 0;
+  margin: 0;
   position: relative;
   .filters_container {
     position: sticky;
@@ -15,16 +15,19 @@
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
+    transition: all linear .3s;
     z-index: 11;
+    background-color: var(--main-background-color);
   }
 }
 main {
   .second_filters_icon {
     width: 40px;
     height: 40px;
-    background-color: white;
+    border: 1px solid var(--main-text-color);
+    background-color: var(--item-background);
     font-size: 1.1em;
-    color: black;
+    color: var(--main-text-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,14 +44,14 @@ main {
 .filters_component {
   width: 100%;
   min-height: 100vh;
-  background-color: white;
-
+  background-color: var(--main-background-color);
+  transition: all linear .3s;
   .filters_icon {
     width: 40px;
     height: 40px;
-    background-color: white;
+    background-color: var(--item-background);
     font-size: 1.1em;
-    color: black;
+    color: var(--main-text-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,6 +62,7 @@ main {
     top: 40px;
     animation: rotate 10s infinite;
     cursor: pointer;
+    border: 1px solid var(--main-text-color);
   }
   .active_filter_icon {
     left: auto;
@@ -78,14 +82,15 @@ main {
       border: 1px solid gray;
       font-size: 1.2em;
       border-color: transparent;
-      background-color: #f1f5f8;
+      background-color: #cccdcf;
+      color: var(--main-text-color);
     }
   }
   .catagories {
-    border: 1px solid #e6e6e6;
+    border: 1px solid var(--second-font-color);
     margin: 20px 0;
     padding: 10px;
-    border-radius: 2px;
+    border-radius: 5px;
     .title {
       width: 100%;
       display: flex;
@@ -98,9 +103,9 @@ main {
       font-size: 1.2em;
       font-weight: 500;
       cursor: pointer;
-      color: #102a42;
+      color: var(--main-text-color);
       &:hover {
-        background-color: #f1f5f8;
+        color: var(--hover-color);
       }
     }
 
@@ -114,7 +119,7 @@ main {
         li {
           padding: 10xp 20px;
           font-size: 1em;
-          color: rgb(44, 44, 44);
+          color: var(--main-text-color);
           font-weight: 400;
           cursor: pointer;
           margin: 10px 0;
@@ -170,6 +175,7 @@ main {
       .Price_range {
         margin: 0 10px;
         line-height: 2;
+        color: var(--main-text-color);
       }
     }
     .catagories_content_Active {
@@ -183,6 +189,7 @@ main {
     gap: 10px;
     text-transform: capitalize;
     letter-spacing: 2px;
+    color: var(--main-text-color);
     label {
       cursor: pointer;
     }
@@ -224,16 +231,17 @@ main {
     }
   }
   .filters_component {
-    margin-top: 60px;
+    margin-top: 70px;
     .filters_icon {
       visibility: visible;
+      top: 60px;
     }
   }
 
   .products_page_container {
     grid-template-columns: 1fr;
     gap: 20px;
-    margin: 50px 0;
+    margin: 0;
     .filters_container {
       position: fixed;
       top: 0;
@@ -241,12 +249,16 @@ main {
       padding: 10px;
       height: 100%;
       width: 100vw;
-      background-color: white;
+      background-color: var(--main-background-color);
       transform: translate(-100%);
+      visibility: hidden;
+      opacity: 0;
       transition: all linear 0.3s;
     }
     .active_filter_container {
       transform: translate(0);
+      visibility: visible;
+      opacity: 1;
     }
   }
 }
