--- a/src/components/FooterComponent/footer.style.scss
+++ b/src/components/FooterComponent/footer.style.scss
@@ -17,14 +17,18 @@
       gap: 30px;
       font-size: 1.75em;
       font-weight: 400;
+      fill: var(--main-text-color);
 
       .Logo_design {
         color: $mainHoverColor;
       }
+      .logo_title{
+        color: var(--main-text-color);
+      }
     }
     p {
       font-size: 13px;
-      color: gray;
+      color: var(--second-font-color);
       margin: 20px 0;
       line-height: 30px;
     }
@@ -32,12 +36,12 @@
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       align-items: center;
+      max-width: 300px;
 
       .social_icon {
         text-decoration: none;
-        color: gray;
+        color: var(--second-font-color);
         font-size: 1.5em;
-        // display: inline-block;
         width: fit-content;
         &:hover {
           color: $mainHoverColor;
@@ -53,7 +57,10 @@
         font-size: 1.3em;
         font-weight: 400;
         margin-bottom: 30px;
+        letter-spacing: 2px;
+        text-shadow: 1px 1px 5px var(--second-font-color);
         margin-top: 20px;
+        color: var(--main-text-color);
       }
       ul {
         list-style-type: none;
@@ -61,7 +68,7 @@
           margin: 15px 0;
           a {
             text-decoration: none;
-            color: gray;
+            color: var(--second-font-color);
             &:hover {
               color: $mainHoverColor;
             }
@@ -72,7 +79,7 @@
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 950px) {
   .footer_content {
     width: 100%;
     display: grid;
