--- a/src/components/ProductDescription&DetailsComponent/ProductDescription.style.scss
+++ b/src/components/ProductDescription&DetailsComponent/ProductDescription.style.scss
@@ -16,6 +16,7 @@
         border: 1px solid #FBB03B;
         background-color: transparent;
         cursor: pointer;
+        color: var(--main-text-color);
         transition: .4s;
         &:hover{
             background-color:#FBB03B ;
@@ -30,7 +31,6 @@
         span{
             font-size: .9em;
             color: gray;
-
         }
     }
 
@@ -54,10 +54,11 @@
             margin-bottom: 30px;
             font-weight: 400;
             font-size: 1.3em;
+            color: var(--main-text-color);
         }
         p{
             line-height: 2;
-            color: rgb(36, 35, 35);
+            color: var(--second-font-color);
             font-weight: 400;
         }
     }
@@ -74,7 +75,7 @@
             align-items: center;
             gap: 40px;
             li{
-                color: rgb(32, 28, 28);
+                color: var(--second-font-color);
                 display: grid;
                 grid-template-columns: 1fr 1fr;
                 font-weight: 500;
@@ -82,7 +83,7 @@
                 span{
                     font-size: 1.1em;
                     font-weight: 500;
-                    color: black;
+                    color: var(--main-text-color);
                     // margin-right: 50px;
                 }
             }
@@ -116,6 +117,7 @@
                 line-height: 2;
                 .score{
                     text-align: center;
+                    color: var(--main-text-color);
                     p{
                         font-size: 60px;
                         font-weight: 300;
@@ -138,7 +140,7 @@
                 .all_reviews_counter{
                     p{
                         font-size: .8em;
-                        color: gray;
+                        color: var(--second-font-color);
                         word-spacing: 3px;
                     }
                 }
@@ -160,6 +162,7 @@
                         align-items: center;
                         gap: 10px;
                         font-size: 1em;
+                        color: var(--main-text-color);
                         .star{
                             color: #FBB03B;
                         }
@@ -182,10 +185,11 @@
         .add_review_btn{
             width: 100%;
            text-align: center;
+           
            button{
             border-color: transparent;
             background-color: #FBB03B;
-            color: black;
+            color: var(--main-text-color);
             font-size: 1.1em;
             word-spacing: 2px;
             font-weight: 400;
@@ -212,6 +216,7 @@
                 display: grid;
                 grid-template-columns: 50px 1fr;
                 gap: 20px;
+                
                 .user_img{
                     width: 50px;
                     height: 50px;
@@ -231,6 +236,7 @@
                             font-weight: 400;
                             word-spacing: 5px;
                             text-transform: capitalize;
+                            color: var(--main-text-color);
                         }
                     }
                     .user_rate{
@@ -254,6 +260,7 @@
                             text-overflow: ellipsis;
                             max-width: 100%;
                             max-height: 40px;
+                            color: var(--second-font-color);
                         }
                     }
                 }
