--- a/src/components/ProductsContainer/ProductsContainer.style.css
+++ b/src/components/ProductsContainer/ProductsContainer.style.css
@@ -20,8 +20,7 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 10px 20px;
-  margin: 30px 0;
-  color: #292929;
+  color: var(--main-text-color);
 }
 
 .products_sort .display_icons {
@@ -42,16 +41,21 @@
 }
 
 .products_sort .display_icons .sort_icon:hover {
-  color: tomato;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  color: var(--hover-color);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
   cursor: pointer;
+}
+
+.products_sort .items_found {
+  color: var(--second-font-color);
+  font-size: .9em;
 }
 
 .products_sort .line {
   width: 100%;
   height: 1px;
-  background-color: gray;
+  background-color: var(--main-text-color);
 }
 
 .products_sort .sort {
@@ -72,6 +76,7 @@
   padding: 2px;
   font-size: 1rem;
   border-color: transparent;
+  border-radius: 5px;
 }
 
 @media only screen and (max-width: 700px) {
@@ -83,13 +88,16 @@
 
 @media only screen and (max-width: 900px) {
   .products_sort {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-pack: left;
         -ms-flex-pack: left;
             justify-content: left;
-    gap: 10px;
-    padding: 10px 5px;
+    gap: 20px;
+    padding: 0;
     margin: 10px 0;
   }
   .products_sort .display_icons {
@@ -105,7 +113,7 @@
     -webkit-box-pack: left;
         -ms-flex-pack: left;
             justify-content: left;
-    gap: 2px;
+    gap: 10px;
   }
 }
 /*# sourceMappingURL=ProductsContainer.style.css.map */
