--- a/src/components/ProductsContainer/ProductsContainer.style.scss
+++ b/src/components/ProductsContainer/ProductsContainer.style.scss
@@ -11,8 +11,8 @@
   gap: 2rem;
   align-items: center;
   padding: 10px 20px;
-  margin: 30px 0;
-  color: rgb(41, 41, 41);
+  // margin: 30px 0;
+  color: var(--main-text-color);
   .display_icons {
     display: flex;
     justify-content: center;
@@ -21,16 +21,20 @@
     .sort_icon {
       font-size: 1.4em;
       &:hover {
-        color: tomato;
-        transform: scale(1.1);
+        color: var(--hover-color);
+        transform: scale(1.2);
         cursor: pointer;
       }
     }
   }
+  .items_found{
+    color: var(--second-font-color);
+    font-size: .9em;
+  }
   .line {
     width: 100%;
     height: 1px;
-    background-color: gray;
+    background-color: var(--main-text-color);
   }
   .sort {
     display: flex;
@@ -42,6 +46,7 @@
       padding: 2px;
       font-size: 1rem;
       border-color: transparent;
+      border-radius: 5px;
     }
   }
 }
@@ -53,11 +58,12 @@
 }
 @media only screen and (max-width: 900px) {
   .products_sort {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: left;
-    gap: 10px;
-    padding: 10px 5px;
-    margin: 10px 0;
+    gap: 20px;
+    padding: 0;
+    margin:  10px 0;
     .display_icons {
       justify-content: left;
       gap: 5px;
@@ -67,7 +73,7 @@
     }
     .sort {
       justify-content: left;
-      gap: 2px;
+      gap: 10px;
     }
   }
 }
