--- a/src/components/ProductsDetailsComponent/ProductDetails.style.scss
+++ b/src/components/ProductsDetailsComponent/ProductDetails.style.scss
@@ -1,10 +1,8 @@
 .single_product_details_container{
     padding: 10px;
-    // margin: 50px 0;
     .single_product_details{
         display: grid;
         grid-template-columns: 1fr 430px;
-        // align-items: center;
         gap: 20px;
         .product_images{
             display: grid;
@@ -55,20 +53,20 @@
                 h2{
                     font-size: 30px;
                     font-weight: 400;
+                    color: var(--main-text-color);
                 }
                 p{
                     font-size: 30px;
                     font-weight: 500;
-                    color: #FF0000;
+                    color: var(--second-hover-color);
                 }
             }
             .colors{
-                // display: grid;
-                // align-items: center;
                 p{
-                    font-size: 20px;
+                    font-size: 1.3em;
                     font-weight: 300;
                     margin: 20px 0;
+                    color: var(--main-text-color);
                 }
                 ul{
                     list-style-type: none;
@@ -78,9 +76,13 @@
                     li{
                         width: 40px;
                         height: 40px;
-                        border: 8px solid #E6E6E6;
+                        border: 8px solid var(--item-background);
                         padding: 2px;
                         border-radius: 5px;
+                        &:hover{
+                            border: 8px solid var(--hover-color);
+                            cursor: pointer;
+                        }
                         &:nth-of-type(1){
                             background-color: #FF0000;
                         }
@@ -111,11 +113,11 @@
                         width: fit-content;
                         font-size: 1.5em;
                         gap: 30px;
-                        border: 1px solid gray;
+                        border: 1px solid var(--second-font-color);
                         border-radius: 50px;
                         padding: 10px 20px;
                         font-weight: 900;
-                        color: rgb(41, 40, 40);
+                        color: var(--main-text-color);
 
                         li{
                             cursor: pointer;
@@ -131,7 +133,7 @@
                         width: 100%;
                         border-color: transparent;
                         background-color: #FBB03B;
-                        color: rgb(255, 255, 255);
+                        color: var(--main-text-color);
                         font-size: 1.2em;
                         word-spacing: 2px;
                         font-weight: 400;
@@ -142,6 +144,7 @@
                         cursor: pointer;
                         &:hover{
                             background-color: #fa9b03;
+                            color: white;
                             
                         }
                     }
@@ -153,11 +156,12 @@
                     width: 50px;
                     height: 50px;
                     border-radius: 50%;
-                    border: 1px solid gray;
+                    border: 1px solid var(--second-font-color);
                     font-size: 20px;
                     margin-left: 20px;
                     transition: .3s;
                     cursor: pointer;
+                    color: var(--main-text-color);
                     &:hover{
                         background-color: #fa9b03;
                         color: white;
