--- a/src/components/SubscripeComponent/Subscripe.style.css
+++ b/src/components/SubscripeComponent/Subscripe.style.css
@@ -1,5 +1,5 @@
 .subscripe_container {
-  margin: 50px 0;
+  margin-top: 50px;
 }
 
 .subscripe_container .mask {
@@ -28,7 +28,7 @@
   font-weight: 400;
   color: white;
   margin: 60px 80px;
-  line-height: 40px;
+  line-height: 1.5;
 }
 
 .subscripe_container .mask .subcripe form {
@@ -82,13 +82,13 @@
   color: #1a6eff;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
   .subscripe_container .mask .subcripe {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
   .subscripe_container .mask .subcripe p {
-    margin: 30px 12px;
+    margin: 20px 12px;
   }
   .subscripe_container .mask .subcripe form {
     display: -ms-grid;
