--- a/src/components/TodayProductsComponent/TodayProducts.style.css
+++ b/src/components/TodayProductsComponent/TodayProducts.style.css
@@ -7,6 +7,7 @@
   text-align: center;
   font-size: 1.75em;
   font-weight: 400;
-  margin: 50px 0;
+  margin: 20px 0;
+  color: var(--main-text-color);
 }
 /*# sourceMappingURL=TodayProducts.style.css.map */
