--- a/src/components/TodayProductsComponent/TodayProducts.style.scss
+++ b/src/components/TodayProductsComponent/TodayProducts.style.scss
@@ -6,7 +6,8 @@
       text-align: center;
       font-size: 1.75em;
       font-weight: 400;
-      margin: 50px 0;
+      margin: 20px 0;
+      color: var(--main-text-color);
     }
   }
 }
