--- a/src/components/HeaderComponent/Header.style.scss
+++ b/src/components/HeaderComponent/Header.style.scss
@@ -36,7 +36,7 @@
     .pills {
       position: absolute;
       width: 80%;
-      background-color: var(--item-background);
+      background-color: var(--second-item-bag);
       bottom: 0;
       left: 0;
       padding: 20px;
