--- a/src/components/ProductsDetailsComponent/ProductDetails.style.scss
+++ b/src/components/ProductsDetailsComponent/ProductDetails.style.scss
@@ -13,10 +13,10 @@
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
-                gap: 5px;
+                gap: 10px;
                 .single_gallery_image{
                     width: 100px;
-                    height: 100px;
+                    height: 100%;
                     cursor: pointer;
                     img{
                         width: 100%;
@@ -33,7 +33,8 @@
             .main_image{
                 width: 100%;
                 padding-top: 15px;
-                height: 100%;
+                height: 500px;
+                // max-height: 500px;
                 img{
                     width: 100%;
                     height: 100%;
@@ -54,6 +55,7 @@
                     font-size: 30px;
                     font-weight: 400;
                     color: var(--main-text-color);
+                    text-transform: capitalize;
                 }
                 p{
                     font-size: 30px;
@@ -82,18 +84,6 @@
                         &:hover{
                             border: 8px solid var(--hover-color);
                             cursor: pointer;
-                        }
-                        &:nth-of-type(1){
-                            background-color: #FF0000;
-                        }
-                        &:nth-of-type(2){
-                            background-color: #00ffff;
-                        }
-                        &:nth-of-type(3){
-                            background-color: #8400ff;
-                        }
-                        &:nth-of-type(4){
-                            background-color: #ff0055;
                         }
                     }
                     
@@ -191,7 +181,7 @@
                     order: 2;
                     .single_gallery_image{
                         width: 100%;
-                        height: 100%;
+                        // height: 100%;
                     }
                     
                 }
@@ -202,6 +192,16 @@
 @media only screen and (max-width:450px){
     .single_product_details_container{
         .single_product_details{
+            .product_images{
+               
+                .main_image{
+                    width: 100%;
+                    padding-top: 15px;
+                    height: 100%;
+                    max-height: 250px;
+
+                }
+            }
             .product_details{
                 .quantity_favorits_addTocart{
                     display: flex;
